Tests/FrontEndTests/validPrograms/01_SimpleDeclaration.c
int b;

void main() {
   char a;
}
