Tests/FrontEndTests/SemanticError/02_MissingFuncDeclaration.c
void main() {
   int64_t a;
   toto(a);
}
